make getById endpoint and rename get-all old function  :26-1